--- a/backend/templates/category.html
+++ b/backend/templates/category.html
@@ -3,8 +3,9 @@
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
                 <meta name="description" content="Instaright Instapaper Firefox addon, realtime addon streaming, xmpp instapaper article updates, article recommendation" />
-                <meta name="keywords" content="Instaright, social bookmark, social bookmarking, social recommendation, Instapaper firefox, Instapaper for firefox, instapaper import delicious, import delicious bookmarks, instapaper delicious, delicious importer, export delicious bookmarks to instapaper, instapaper addon for firefox, instapaper add-on firefox, instapaper add-on, social bookmark, read it later" />
-		<meta name="title" content="Instaright Social Bookmarking and recommendation app" />
+                <meta name="keywords" content="Instaright categories, instaright topics" />
+		<meta name="title" content="Instaright Categories and Topics"  />
+		<meta name="description" content="Instaright Categories orginized data by topics help you easy infromation discovery" />
                 <link rel="stylesheet" type="text/css" href="../css/style.css" />
                 <!--script src="http://www.google.com/jsapi?key=AIzaSyDu78p4P0qEe3CTU4GssVBz_crZemld_eg" type="text/javascript" charset="utf-8"></script-->
 		<script type="text/javascript" src="/_ah/channel/jsapi"></script>
@@ -297,7 +298,7 @@
                                         <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Import</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Delicious Import">Delicious Import</a></li>
                                 </ul>
                         </div>
                         <div id="right_box_bot">
@@ -316,7 +317,7 @@
 <div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
