--- a/backend/templates/import_tool.html
+++ b/backend/templates/import_tool.html
@@ -17,6 +17,8 @@
         
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width = 900"/>
+	<meta name="title" content="Instaright Importer from Delicious to Instapaper" />
+	<meta name="description" content="Delicious has been sold. Instaright Importer from Delicious to Instapaper will help you transfer your Delicious history to Instapaper" />
         <meta name="keywords" content="export delicious to instapaper, how to export delicious bookmarks to instapaper, instapaper import delicious, delicious to instapaper, import delicious bookmarks, instapaper delicious"/>
         
         <title>Import Delicious Bookmarks</title>
@@ -130,7 +132,7 @@
             
             <div id="footer-container">
                 <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                        <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a></p>
+                	<p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
                 </div>
             </div>
         </div>
