--- a/backend/templates/tools.html
+++ b/backend/templates/tools.html
@@ -8,8 +8,10 @@
 
         
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta name="title" content="Instaright Tools - Browser Addons, Importers and more" />
+	<meta name="description" content="Instaright Tools place where you can find all Instaright productivity tools including Browser Addons, Importers and more" />
         <meta name="viewport" content="width = 900"/>
-        <meta name="keywords" content="instaright firefox addon, instaright chrome addon, instapaper firefox addon, instapaper chrome addon, export delicious to instapaper, how to export delicious bookmarks to instapaper, instapaper import delicious, delicious to instapaper, import delicious bookmarks, instapaper delicious"/>
+        <meta name="keywords" content="Instaright tools, instaright firefox addon, instaright chrome addon, instapaper firefox addon, instapaper chrome addon, export delicious to instapaper, how to export delicious bookmarks to instapaper, instapaper import delicious, delicious to instapaper, import delicious bookmarks, instapaper delicious"/>
 
 	<script type="text/javascript" src="/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
 	<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
@@ -84,7 +86,7 @@
 		<div class="inline">
 			<a href="https://addons.mozilla.org/en-US/firefox/addon/instaright-social-bookmarks/"><img src="static/images/instaright_firefox_addon.png" /></a>
 			<div class="version">
-				<ol><li>Version 0.4.1.2</li>
+				<ol><li>Version 0.4.2.3</li>
 				<li>(Works with Windows, MacOS, Linux)</li></ol>
 			</div>
 			<div class="install_steps">
@@ -123,7 +125,7 @@
 <br class="clear-both" />
 <div id="footer-container">
      <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-          <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
      </div>
 </div>
 <!-- GETSATISFACTION -->
