--- a/backend/templates/privacy_policy.html
+++ b/backend/templates/privacy_policy.html
@@ -5,6 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width = 900"/>
         <meta name="keywords" content="Instaright Privacy Policy"/>
+        <meta name="title" content="Instaright Privacy Policy"/>
+        <meta name="description" content="Due to transparency of Instaright, we put out public  Instaright Privacy policy"/>
         
         <title>Instaright Privacy Policy</title>
         
@@ -51,7 +53,7 @@
             <div class="clearfix"></div> 
             <div id="footer-container">
                 <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                        <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a></p>
+                	<p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a> | <a href="http://feeds.feedburner.com/InstarightFeed" title="Instaright Feed">Feed</a></p>
                 </div>
             </div>
         <!-- End container" -->
